[022-(0.3.0)]:: Output Format >> Added the myLibrary dictionary output string with no issues. The program in this stage is functionally complete (huzzah)!! There are minor issues with screen re-sizing, the styling needs to be improved, and overall UX is rather bland. But the logic is solid enough. Will try to address some of the small remaining bits and wrap this one up soon.

--- a/style.css
+++ b/style.css
@@ -123,6 +123,8 @@ button{
 }
 .controls{
   margin-left: 15%;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 .canvas{
   margin-right: 15%;
